# kascade

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE  README.md  justfile  pyproject.toml  reproducibility.justfile
bench/: CMakeLists.txt  runner.cpp
bench/detail/: algorithm.hpp  algorithm_factory.cpp  algorithm_factory.hpp  algorithm_impl.hpp  benchmark_config.hpp  generation.cpp  generation.hpp  input_distribution_utils.hpp  parsing.cpp  parsing.hpp  reporting.cpp  reporting.hpp  serialization.hpp  stats.cpp  stats.hpp  verification.cpp  verification.hpp
bench/detail/mplr/: communicator.hpp  forest_irregular_optimized_ruling_set.hpp  forest_irregular_pointer_doubling.hpp  forest_irregular_ruling_set2.hpp  forest_regular_optimized_ruling_set.hpp  forest_regular_ruling_set2.hpp  helper_functions.hpp  karam_grid_communicator.hpp  mplr.cpp  mplr.hpp
bench/detail/mplr/karam/mpi/: all_to_all.hpp  grid_alltoall.hpp  rdma.hpp
bench/detail/mplr/karam/mpi/indirect_all_to_all/: grid_all_to_all_impl.hpp
bench/detail/mplr/karam/utils/: containers.hpp  debug_print.hpp  local_chunk_distribution_strategies.hpp  non_copyable.hpp  timer.hpp
bench/input/: CMakeLists.txt  bfs.cpp  bfs.hpp  bfs_forest_generation.cpp  concepts.hpp  generation.cpp  generation.hpp  graph.cpp  graph.hpp  no_preprocessing.cpp
cmake/patches/: macos_no_define_xopen_source.patch
cmake/presets/: HoreKaPresets.json  NiklasUhlPresets.json  SuperMUCPresets.json
eval/: Config.jl  KascadeEval.jl  LogProcessing.jl  Manifest.toml  Project.toml  barplot.jl  indirection_bar_plot.jl  indirection_scatter_plot.jl  justfile  locality_plot.jl  myplot.jl  parameter_tuning.jl  plot.jl  scalability_plot.jl
eval/reproducibility/: indirection_bar_plot.jl  indirection_line_plot.jl  indirection_scatter_plot.jl  locality_plot.jl  scalability_plot.jl
experiments/: alltoone-gather.suite.yaml  async-euler.suite.yaml  async-no-spawn-more-rulers.suite.yaml  async-no-spawn.suite.yaml  async-pointer-doubling.suite.yaml  eulertour-sparse-ruling-set.suite.yaml  gather-chase.suite.yaml  local-contraction.suite.yaml  optimize-async-params-2.suite.yaml  optimize-async-params.suite.yaml  optimize-comm-rounds-2.suite.yaml  optimize-comm-rounds.suite.yaml  optimize-ultimate-factor.suite.yaml  optimize-ultimate-sanders-factor.suite.yaml  optimize-ultimate-sanders-factor2.suite.yaml  optimize-ultimate-sanders-factor3.suite.yaml  owner-caching.suite.yaml  pointer-doubling.suite.yaml  post-invert-list.suite.yaml  rma-pointer-doubling.suite.yaml  sparse-ruling-set-eulertour.suite.yaml  sparse-ruling-set-grid-a2a.suite.yaml  sparse-ruling-set-indirection.suite.yaml  sparse-ruling-set-locality.suite.yaml  sparse-ruling-set-push-propagation.suite.yaml  sparse-ruling-set-spawn-factor.suite.yaml  sparse-ruling-set-spawn-sanders-briefkasten-tuning.suite.yaml  sparse-ruling-set-spawn-sanders-others.suite.yaml  sparse-ruling-set-spawn-sanders-owner-cache.suite.yaml  sparse-ruling-set-spawn-sanders.suite.yaml  sparse-ruling-set-spawn.suite.yaml  sparse-ruling-set-two-level-async-no-spawn.suite.yaml  sparse-ruling-set-two-level-async-threshold-1024.suite.yaml  sparse-ruling-set-two-level-async.suite.yaml  sparse-ruling-set-two-level-sync-fixed-rounds.suite.yaml  sparse-ruling-set-two-level-sync-reverse-list-locality-aware.suite.yaml  sparse-ruling-set-two-level-sync.suite.yaml  sparse-ruling-set-two-level.suite.yaml  sparse-ruling-set.suite.yaml  sync-optimized.suite.yaml  (+5 more)
experiments/reproducibility/: command-template-example.txt  sbatch-template-example.txt  sparse-ruling-set-indirection.suite.yaml  sparse-ruling-set-locality.suite.yaml  sparse-ruling-set.suite.yaml
experiments/submission/: pointer-doubling.suite.yaml  sparse-ruling-set-eulertour.suite.yaml  sparse-ruling-set-indirection.suite.yaml  sparse-ruling-set-locality.suite.yaml
legacy/: .gitmodules
legacy/code/: Code - Verknüpfung.lnk
legacy/code/cpp/: analyze_instances.cpp  communicator.cpp  forest_local_contraction.cpp  forest_local_contraction2.cpp  generator.cpp  helper_functions.cpp  interfaces.cpp  local_contraction.cpp  main.cpp  test.cpp  timer.cpp
legacy/code/cpp/final_algorithms/: list_double_pointer_doubling.cpp  list_pointer_doubling_reduce_communication_volume.cpp
legacy/code/cpp/grid_list_ranking/: grid_irregular_pointer_doubling.cpp  grid_irregular_ruling_set2.cpp  grid_regular_ruling_set2.cpp
legacy/code/cpp/karam/: karam.hpp
legacy/code/cpp/list_ranking/: asynchron_ruling_set2.cpp  example.cpp  grid_asynchron_ruling_set2.cpp  irregular_pointer_doubling.cpp  irregular_ruling_set2.cpp  regular_double_pointer_doubling.cpp  regular_pointer_doubling.cpp  regular_ruling_set.cpp  regular_ruling_set2.cpp  (+2 more)
legacy/code/python/: evaluate.py  fit_distribution.py  to_json.py
legacy/other/: run_all.sh  times.ods
legacy/other/supermuc_auswertung/: results_euler_tour.txt  results_regular_ruling_set.txt  results_regular_ruling_set2.txt  results_regular_ruling_set2_rec.txt  results_regular_ruling_set_rec.txt  results_wood_regular_ruling_set.txt
lib/: CMakeLists.txt
lib/kascade/: CMakeLists.txt  alltoall_utils.hpp  assertion_levels.hpp  async_pointer_doubling.cpp  bits.hpp  configuration.hpp  distribution.hpp  eulertour.cpp  eulertour.hpp  grid_alltoall.hpp  grid_communicator.cpp  grid_communicator.hpp  list_ranking.cpp  list_ranking.hpp  local_pointer_chasing.cpp  local_pointer_chasing_generic.hpp  pack.hpp  packed_index.hpp  pointer_doubling.cpp  pointer_doubling.hpp  pointer_doubling_generic.hpp  request_aggregation_scheme.hpp  resterampe.hpp  rma_pointer_doubling.cpp  sparse_ruling_set.cpp  sparse_ruling_set.hpp  successor_utils.cpp  successor_utils.hpp  types.hpp
lib/kascade/graph/: CMakeLists.txt  concepts.hpp  graph.cpp  graph.hpp
lib/kascade/sparse_ruling_set_detail/: CMakeLists.txt  local_contraction.hpp  post_invert.hpp  ruler_chasing_engine.hpp  ruler_propagation.hpp  ruler_selection.hpp  sparse_ruling_set.cpp  trace.hpp  types.hpp
tests/: CMakeLists.txt  pack_test.cpp
(+28 files in other folders)
